fix change colours for buttons for better contrast/accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,9 +152,9 @@ nav {
   font-family: 'Montserrat Alternates', Tahoma, sans-serif;
   margin: 40px auto 0 auto;
   width: 80%;
-  border: 3px solid  #b7d7e8;
+  border: 3px solid  #acc3e8;
   border-radius: 25px;
-  box-shadow: 5px 10px #87bdd8;
+  box-shadow: 5px 10px #647cd7;
   padding: 20px;
   text-align: center;
   font-size: 1rem;
@@ -168,9 +168,8 @@ nav {
   font-family: 'Montserrat Alternates', Tahoma, sans-serif;
   font-size: 1.2rem;
   font-weight: bold;
-  color: #fff;
-  text-shadow: 1px 1px #87bdd8;
-  background-color: #87bdd8;
+  color: #354a54;
+  background-color: #acc3e8;
   letter-spacing: 2px;
   border-radius: 25px;
   padding: 10px;
@@ -178,7 +177,7 @@ nav {
 
 .contact button:hover, #submit:hover {
   background-color: #99aebb;
-  color: #000;
+  color: #fff;
 }
 
   /* location info */
